optimised the code for service layer