@@ -38,48 +38,13 @@ public class MenuService {
 
     @Transactional
     public RestaurantResponse addRestaurant(CreateRestaurantRequest request) {
-        try {
-            Restaurant restaurant = new Restaurant();
-            restaurant.setName(request.getName());
-            restaurant.setAddress(request.getAddress());
-            restaurant.setCity(request.getCity());
-            restaurant.setPincode(request.getPincode());
+        Restaurant restaurant = mapToRestaurant(request);
+        restaurant.setMenuItems(mapToMenuItems(request.getMenuItems(), restaurant));
 
-            List<MenuItem> items = request.getMenuItems() != null
-                    ? request.getMenuItems().stream().map(dto -> {
-                MenuItem item = new MenuItem();
-                item.setDishName(dto.getDishName());
-                item.setPrice(dto.getPrice());
-                item.setAvailability(dto.getAvailability());
-                item.setType(dto.getType());
-                item.setRestaurant(restaurant);
-                return item;
-            }).collect(Collectors.toList())
-                    : new ArrayList<>();
+        Restaurant saved = saveWithErrorHandling(restaurant, "Failed to save restaurant");
+        logger.info("Restaurant saved successfully: ID={}", saved.getId());
 
-            restaurant.setMenuItems(items);
-
-            Restaurant saved;
-            try {
-                saved = restaurantRepository.save(restaurant);
-                logger.info("Restaurant saved successfully: ID={}", saved.getId());
-            } catch (DataAccessException e) {
-                logger.error("Database error saving restaurant: {}", e.getMessage(), e);
-                throw new RuntimeException(ValidationError.DATABASE_ERROR.errorMessage, e);
-            }
-
-            RestaurantResponse response = new RestaurantResponse();
-            response.setId(saved.getId());
-            response.setName(saved.getName());
-            response.setAddress(saved.getAddress());
-            response.setCity(saved.getCity());
-            response.setPincode(saved.getPincode());
-
-            return response;
-        } catch (Exception e) {
-            logger.error("Unexpected error adding restaurant: {}", e.getMessage(), e);
-            throw new RuntimeException(ValidationError.UNEXPECTED_ERROR.errorMessage, e);
-        }
+        return mapToRestaurantResponse(saved);
     }
 
 
@@ -88,102 +53,148 @@ public class MenuService {
         // first search into local/application cache if found then return else proceed (cache miss)
         // then search into distributed cache (redis) if found then return else proceed
         //Final call will be to search in db and update the local and distributed cache for eventual consistency
-        Restaurant restaurant = restaurantRepository.findById(restaurantId)
-                .orElseThrow(() -> new ResourceNotFoundException("Restaurant not found"));
-
+        Restaurant restaurant = findRestaurantById(restaurantId);
         Pageable pageable = PageRequest.of(page, size, Sort.by("id").ascending());
         Page<MenuItem> pagedItems = menuItemRepository.findByRestaurant(restaurant, pageable);
 
-        List<MenuItemBasicResponse> itemResponses = pagedItems.getContent().stream().map(item -> {
-            MenuItemBasicResponse dto = new MenuItemBasicResponse();
-            dto.setId(item.getId());
-            dto.setDishName(item.getDishName());
-            dto.setPrice(item.getPrice());
-            dto.setAvailability(item.getAvailability());
-            dto.setType(item.getType());
-            return dto;
-        }).toList();
-
-        PaginatedMenuItemResponse response = new PaginatedMenuItemResponse();
-        response.setRestaurantId(restaurant.getId());
-        response.setRestaurantName(restaurant.getName());
-        response.setMenuItems(itemResponses);
-        response.setCurrentPage(pagedItems.getNumber());
-        response.setTotalPages(pagedItems.getTotalPages());
-        response.setTotalElements(pagedItems.getTotalElements());
-
-        return response;
+        return mapToPaginatedResponse(restaurant, pagedItems);
     }
 
     @Transactional
     public RestaurantMenuResponse updateMenu(Long restaurantId, List<MenuItemRequest> menuItems) {
 
-        Restaurant existing = restaurantRepository.findById(restaurantId)
-                .orElseThrow(() -> new ResourceNotFoundException("Restaurant not found"));
-        try{
-            List<MenuItem> updatedItems = menuItems.stream().map(menu -> {
-                MenuItem item = new MenuItem();
-                item.setDishName(menu.getDishName());
-                item.setPrice(menu.getPrice());
-                item.setAvailability(menu.getAvailability());
-                item.setType(menu.getType());
-                item.setRestaurant(existing);
-                return item;
-            }).toList();
+        Restaurant restaurant = findRestaurantById(restaurantId);
+        restaurant.getMenuItems().clear();
+        restaurant.getMenuItems().addAll(mapToMenuItems(menuItems, restaurant));
 
-            // Initialize menuItems if null to avoid NullPointerException
-            if (existing.getMenuItems() == null) {
-                existing.setMenuItems(new ArrayList<>());
-            }
-            existing.getMenuItems().clear();
-            existing.getMenuItems().addAll(updatedItems);
-            Restaurant saved = restaurantRepository.save(existing);
-            return toRestaurantMenuResponse(saved);
-        } catch (Exception e){
-            throw new RuntimeException("Failed to update menu: " + e.getMessage(), e);
-        }
+        Restaurant saved = saveWithErrorHandling(restaurant, "Failed to update menu");
+        return mapToRestaurantMenuResponse(saved);
     }
 
     @Transactional
     public void deleteRestaurant(Long restaurantId) {
-        Restaurant restaurant = restaurantRepository.findById(restaurantId)
-                .orElseThrow(() -> new ResourceNotFoundException("Restaurant not found"));
-        restaurantRepository.delete(restaurant);
+        Restaurant restaurant = findRestaurantById(restaurantId);
+        try {
+            restaurantRepository.delete(restaurant);
+            logger.info("Restaurant deleted successfully: ID={}", restaurantId);
+        } catch (DataAccessException e) {
+            logger.error("Database error deleting restaurant: {}", e.getMessage(), e);
+            throw new RuntimeException(ValidationError.DATABASE_ERROR.errorMessage, e);
+        }
     }
 
     @Transactional(readOnly = true)
     public List<MenuItemResponse> searchByDishName(String dishName) {
         List<MenuItem> items = menuItemRepository.findByDishNameContainingIgnoreCase(dishName);
-        return items.stream().map(item -> {
-            MenuItemResponse dto = new MenuItemResponse();
-            dto.setId(item.getId());
-            dto.setDishName(item.getDishName());
-            dto.setPrice(item.getPrice());
-            dto.setAvailability(item.getAvailability());
-            dto.setType(item.getType());
-            dto.setRestaurantId(item.getRestaurant().getId());
-            dto.setRestaurantName(item.getRestaurant().getName());
-            return dto;
-        }).toList();
+        return items.stream()
+                .map(this::mapToMenuItemResponse)
+                .collect(Collectors.toList());
     }
 
-    private RestaurantMenuResponse toRestaurantMenuResponse(Restaurant restaurant) {
-        RestaurantMenuResponse response = new RestaurantMenuResponse();
-        response.setId(restaurant.getId());
-        response.setName(restaurant.getName());
+    // Helper Methods
 
-        List<MenuItemBasicResponse> menuItemResponses = restaurant.getMenuItems().stream().map(item -> {
-            MenuItemBasicResponse dto = new MenuItemBasicResponse();
-            dto.setId(item.getId());
-            dto.setDishName(item.getDishName());
-            dto.setPrice(item.getPrice());
-            dto.setAvailability(item.getAvailability());
-            dto.setType(item.getType());
-            return dto;
-        }).toList();
+    private Restaurant findRestaurantById(Long restaurantId) {
+        return restaurantRepository.findById(restaurantId)
+                .orElseThrow(() -> new ResourceNotFoundException("Restaurant not found with ID: " + restaurantId));
+    }
 
+    private Restaurant mapToRestaurant(CreateRestaurantRequest request) {
+        return Restaurant.builder()
+                .name(request.getName())
+                .address(request.getAddress())
+                .city(request.getCity())
+                .pincode(request.getPincode())
+                .menuItems(new ArrayList<>())
+                .build();
+    }
+
+    private List<MenuItem> mapToMenuItems(List<MenuItemRequest> requests, Restaurant restaurant) {
+        if (requests == null) {
+            return new ArrayList<>();
+        }
+        return requests.stream()
+                .map(dto -> MenuItem.builder()
+                        .dishName(dto.getDishName())
+                        .price(dto.getPrice())
+                        .availability(dto.getAvailability())
+                        .type(dto.getType())
+                        .restaurant(restaurant)
+                        .build())
+                .collect(Collectors.toList());
+    }
+
+    private RestaurantResponse mapToRestaurantResponse(Restaurant restaurant) {
+        return RestaurantResponse.builder()
+                .id(restaurant.getId())
+                .name(restaurant.getName())
+                .address(restaurant.getAddress())
+                .city(restaurant.getCity())
+                .pincode(restaurant.getPincode())
+                .build();
+    }
+
+    private RestaurantMenuResponse mapToRestaurantMenuResponse(Restaurant restaurant) {
+        RestaurantMenuResponse response = RestaurantMenuResponse.builder()
+                .id(restaurant.getId())
+                .name(restaurant.getName())
+                .build();
+
+        List<MenuItemBasicResponse> menuItemResponses = restaurant.getMenuItems().stream()
+                .map(this::mapToMenuItemBasicResponse)
+                .collect(Collectors.toList());
         response.setMenuItems(menuItemResponses);
         return response;
+    }
+
+    private PaginatedMenuItemResponse mapToPaginatedResponse(Restaurant restaurant, Page<MenuItem> pagedItems) {
+        PaginatedMenuItemResponse response = PaginatedMenuItemResponse.builder()
+                .restaurantId(restaurant.getId())
+                .restaurantName(restaurant.getName())
+                .currentPage(pagedItems.getNumber())
+                .totalPages(pagedItems.getTotalPages())
+                .totalElements(pagedItems.getTotalElements())
+                .build();
+
+        List<MenuItemBasicResponse> itemResponses = pagedItems.getContent().stream()
+                .map(this::mapToMenuItemBasicResponse)
+                .collect(Collectors.toList());
+        response.setMenuItems(itemResponses);
+        return response;
+    }
+
+    private MenuItemBasicResponse mapToMenuItemBasicResponse(MenuItem item) {
+        return MenuItemBasicResponse.builder()
+                .id(item.getId())
+                .dishName(item.getDishName())
+                .price(item.getPrice())
+                .availability(item.getAvailability())
+                .type(item.getType())
+                .build();
+    }
+
+    private MenuItemResponse mapToMenuItemResponse(MenuItem item) {
+        return MenuItemResponse.builder()
+                .id(item.getId())
+                .dishName(item.getDishName())
+                .price(item.getPrice())
+                .availability(item.getAvailability())
+                .type(item.getType())
+                .restaurantId(item.getRestaurant().getId())
+                .restaurantName(item.getRestaurant().getName())
+                .build();
+    }
+
+    private <T> T saveWithErrorHandling(T entity, String errorMessage) {
+        try {
+            if (entity instanceof Restaurant) {
+                return (T) restaurantRepository.save((Restaurant) entity);
+            } else {
+                throw new IllegalArgumentException("Unsupported entity type");
+            }
+        } catch (DataAccessException e) {
+            logger.error("{}: {}", errorMessage, e.getMessage(), e);
+            throw new RuntimeException(ValidationError.DATABASE_ERROR.errorMessage, e);
+        }
     }
 
 }
